--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Linta & Nijo — Wedding Invitation</title>
+<title>Linta & Nijo — engagement Invitation</title>
 <style>
   :root{--accent:#b02e2e;--muted:#6b6b6b;--bg:#f8f6f3}
   *{box-sizing:border-box}
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
